--- a/popUp.html
+++ b/popUp.html
@@ -38,6 +38,7 @@
                             </button>
                         </div>
                     </div>
+                    
                     <div class="row">
                         <div class="col">
                             <button class="btn btn-primary" id="view">
@@ -45,7 +46,7 @@
                                     <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
                                     <path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
                                   </svg>
-                                View
+                                Views
                             </button>
                         </div>
                     </div>
@@ -75,6 +76,13 @@
                             </button>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col" >
+                            <textarea id="comments" class="form-control" placeholder="Comments"></textarea>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
