Add filename option

--- a/popUp.html
+++ b/popUp.html
@@ -46,7 +46,7 @@
                                     <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
                                     <path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
                                   </svg>
-                                Views
+                                View
                             </button>
                         </div>
                     </div>
@@ -78,11 +78,18 @@
                     </div>
 
                     <div class="row">
-                        <div class="col" >
-                            <textarea id="comments" class="form-control" placeholder="Comments"></textarea>
+                        <textarea id="comments" class="form-control" placeholder="Comments"></textarea>
+                    </div>
+                    <br/>
+
+                    <div class="row">
+                        <div class="input-group mb-3">
+                            <input id="fileName" class="form-control" placeholder="FileName"></input>
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">.pdf</span>
+                            </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
