--- a/popUp.html
+++ b/popUp.html
@@ -16,7 +16,7 @@
             <div class="panel panel-default text-center "></div>
             <div id="text" class="text-center">
                 <div class="card-body">
-                    <p class="card-text" id="card-text1">Screen Shot Capturer</p>
+                    <p class="card-text" id="card-text1">Snap Help</p>
                     <div class="row">
                         <div class="col">
                             <button class="btn btn-primary" id="start">
@@ -34,7 +34,7 @@
                                     <path d="M9 5C7.343 5 5 6.343 5 8a4 4 0 0 1 4-4v1z"/>
                                     <path fill-rule="evenodd" d="M14.333 3h-2.015A5.97 5.97 0 0 0 9 2a5.972 5.972 0 0 0-3.318 1H1.667C.747 3 0 3.746 0 4.667v6.666C0 12.253.746 13 1.667 13h4.015c.95.632 2.091 1 3.318 1a5.973 5.973 0 0 0 3.318-1h2.015c.92 0 1.667-.746 1.667-1.667V4.667C16 3.747 15.254 3 14.333 3zM1.5 5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zM9 13A5 5 0 1 0 9 3a5 5 0 0 0 0 10z"/>
                                     <path d="M2 3a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1z"/>
-                                  </svg>  Snap
+                                  </svg>  Capture
                             </button>
                         </div>
                     </div>
@@ -46,11 +46,23 @@
                                     <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
                                     <path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
                                   </svg>
-                                View
+                                Preview
                             </button>
                         </div>
                     </div>
                     
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn btn-primary" id="undo">
+                                <svg class="bi bi-x" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M11.854 4.146a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708-.708l7-7a.5.5 0 0 1 .708 0z"/>
+                                    <path fill-rule="evenodd" d="M4.146 4.146a.5.5 0 0 0 0 .708l7 7a.5.5 0 0 0 .708-.708l-7-7a.5.5 0 0 0-.708 0z"/>
+                                  </svg>
+                                Undo
+                            </button>
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col">
                             <button class="btn btn-primary" id="cancel">
@@ -72,7 +84,7 @@
                                     <path fill-rule="evenodd" d="M5.646 9.146a.5.5 0 0 1 .708 0L8 10.793l1.646-1.647a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 0-.708z"/>
                                     <path fill-rule="evenodd" d="M8 6a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0v-4A.5.5 0 0 1 8 6z"/>
                                   </svg>
-                                PDF
+                                Download
                             </button>
                         </div>
                     </div>
